Correct horizontal forms on mobile

--- a/sass/common/vars.sass
+++ b/sass/common/vars.sass
@@ -110,3 +110,4 @@ $bg-table-head: $border-component-color + 5
 
 // Breakpoints
 $bp-iphone: 0 569px
+$bp-gt-iphone: 570px
